--- a/public/views/products.html
+++ b/public/views/products.html
@@ -3,12 +3,19 @@
 <div>ALL THE THINGS</div>
 
 <div class="container">
-
-<div class="eachOne" ng-repeat='product in products'>
-	<h2>{{product.item_name}}</h2>
-	<img src='../images/{{product.image_url}}'>
-	<p> Price: ${{product.price}} </p>
-	<button ng-click="addToCart(product)">I need it!</button>
-
+	<div class="eachOne" ng-repeat='product in products'>
+		<h2>{{product.item_name}}</h2>
+		<img src='../images/{{product.image_url}}'>
+		<p> Price: ${{product.price}} </p>
+		<button ng-click="addToCart(product)" ng-disabled='product.added'>
+			<p ng-if="product.added">
+				You got it!
+			</p>
+			<p ng-if="!product.added">
+				I need it!
+			</p>
+		</button>
+	</div>
 </div>
 
+<button ui-sref='cart'>View Cart</button>
