--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,3 +1,4 @@
 <div class = 'homepicture'>
-	<h1 class = 'title'>Cotton Candy Kitchen Dreams</h1>
+	<p class = 'title'>Cotton Candy Kitchen Dreams</p>
+	<a ui-sref='products'>go shopping</a>
 </div>
