added contact page and styling

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,6 @@
 <div class = 'homepicture'>
 	<p class = 'title'>Cotton Candy Kitchen Dreams</p>
-	<a ui-sref='products'>go shopping</a>
+	<p>
+		<a class= 'goShopping'ui-sref='products'>go shopping</a>
+	</p>
 </div>
