--- a/public/views/products.html
+++ b/public/views/products.html
@@ -1,6 +1,6 @@
 
 <div>
-<div>ALL THE MOST DARLING KITCHEN ACCESSORIES!</div>
+<div class= 'upTop'>Shop the most darling kitchen accessories!</div>
 
 <div class="container">
 	<div class="eachOne" ng-repeat='product in products'>
