--- a/public/style.css
+++ b/public/style.css
@@ -14,16 +14,45 @@ body {
 	right: 0;
 }
 
+.goShopping {
+	text-align: center;
+	margin-left: 40%;
+	font-family: cursive;
+	font-size: 25px;
+
+}
+
+a:link{
+	color: #red;
+
+}
+
+a:visited {
+	color: #yellow;
+
+}
+
+a:hover{
+	color: white;
+
+}
+
  header {
  		position: fixed;
     top: 0;
-    width: 100%;
     z-index: 10;
-    background-color: white;
+		background-color: white;
+		display: flex;
+		justify-content: space-around;
+		align-items:center;
+		width: 100%
  }
 
+
+
  .container{
- 	padding-top: 100px;
+ 	padding-top: 5%;
+	margin-top: 2%;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
@@ -44,12 +73,19 @@ body {
 	font-weight: bold;
 	color: #E8F7F2;
 	text-align: center;
+	text-shadow: 2px 2px black;
 }
 
 .eachOne {
 	border-style: dotted;
 	border-color: yellow;
 	background-color: white;
+	margin: 10px;
+	font-size: 10px;
+	font-family: georgia;
+	text-align: center;
+	font-style: italic;
+	padding:10px;
 
 }
 
@@ -60,4 +96,13 @@ body {
 
 .form-container {
 	padding-top: 60px;
+}
+
+.upTop {
+	font-family: cursive;
+	font-size: 36px;
+	padding-left: 20px;
+	text-align: center;
+	color: #dda0dd;
+	font-style: oblique;
 }
